--- a/.github/workflows/deploy-book.yml
+++ b/.github/workflows/deploy-book.yml
@@ -46,7 +46,7 @@ jobs:
     # Build the book
     - name: Build the book
       run: |
-        jupyter-book build gt3_payments_calculator
+        jupyter-book build gt3_payments_calculator --path-output _build/html
 
     # Upload the book's HTML as an artifact
     - name: Upload artifact
